bugfix: home header hover images cropping fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2408,6 +2408,7 @@ svg {
   width: 100%;
   height: 100%;
   background-attachment: fixed;
+  background-size: cover;
   z-index: 1;
   transform: scale(1.03);
   transition: transform 600ms cubic-bezier(0.64, 0.04, 0.35, 1), opacity 600ms cubic-bezier(0.64, 0.04, 0.35, 1);
@@ -2511,7 +2512,7 @@ svg {
   top: 0;
   width: 100%;
   height: 100%;
-  background-attachment: fixed;
+  background-size: cover;
   transform: scale(1.03);
   opacity: 0;
   transition: transform 600ms cubic-bezier(0.64, 0.04, 0.35, 1), opacity 300ms cubic-bezier(0.64, 0.04, 0.35, 1);
