--- a/assets/css/templates/_front-page.scss
+++ b/assets/css/templates/_front-page.scss
@@ -335,6 +335,7 @@ $pine-width : 45rem;
             width: 100%;
             height: 100%;
             background-attachment: fixed;
+            background-size: cover;
             z-index: 1;
             transform: scale(1.03);
             transition: transform 600ms $bezier, opacity 600ms $bezier;
@@ -425,7 +426,7 @@ $pine-width : 45rem;
         top: 0;
         width: 100%;
         height: 100%;
-        background-attachment: fixed;
+        background-size: cover;
         transform: scale(1.03);
         opacity: 0;
         transition: transform 600ms $bezier, opacity 300ms $bezier;
